# CodeChallenge

./: .gitignore  CMakeLists.txt  CodeChallenge.project  CodeChallenge.workspace  LICENSE  README.md
include/: connection.hpp  eye_message.hpp
src/client/: client.cpp
src/server/: server.cpp
src/shared/: temp.cpp
